--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -9,13 +9,12 @@
 <!--        <p th:text="'Hello, ' + ${name} + '!'" />-->
         <h1>恭喜你登陆成功</h1>
         <a href="http://www.baidu.com">
-            <img src="../static/img/wechat.jpg">
+            <img src="/img/wechat.jpg">
         </a>
             <div class="entry-thumb" style="position: absolute; left: 49.8942%; top: 1969px;">
                <a href="http://www.baidu.com" class="thumb-link">
-                   <img src="../static/img/wechat.jpg" alt="Shutterbug">
+                   <img src="/img/wechat.jpg" alt="Shutterbug">
                </a>
             </div>
-
     </body>
 </html>
