更新页面适配手机

--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -1,5 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=0,user-scalable=yes,maximum-scale=1.0">
         <title>demo</title>
         <script src="https://hm.baidu.com/hm.js?382f81c966395258f239157654081890"></script>
     </head>
